Fix: Navbar Updown collapse

--- a/src/components/css/Nav.sass
+++ b/src/components/css/Nav.sass
@@ -126,5 +126,6 @@
 
     .NavContainerLink.unclicked
         min-height: 120px
+        height: 13dvh
         visibility: collapse
         opacity: 0
